Adição do portfólio

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 
         <div class="topnav" id="myTopnav">
+            <a href=""><img src="./img/Logo.svg" alt=""></a>
             <a href="#home" class="active">Inicio</a>
             <a href="#sobre">Sobre</a>
             <a href="#Portfólio">Portfólio</a>
@@ -210,7 +211,7 @@
                             </div>
                         </div>
                         <div class="exper-empresa">
-                            <span class="exper-empName">Do FIGMA ao código</span><br>
+                            <span class="exper-empName">Do Figma ao código</span><br>
                             <span class="exper-emptext">Udemy - Cursos de Tecnologia</span>
                         </div>
                     </div>
