--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="https://tivit.com/" target="_blank">
+                    <a href="https://www.energisa.com.br/energisaon/default.aspx" target="_blank">
                         <div class="exper-card">
                             <div class="exper-contIcon">
                                 <div class="exper-icon">
@@ -177,7 +177,7 @@
                 <div class="exper-titleAcad">
                     Ensino superior
                 </div>
-                <a href="https://tivit.com/" target="_blank">
+                <a href="https://www.unipe.edu.br/" target="_blank">
                     <div class="exper-card">
                         <div class="exper-contIcon">
                             <div class="exper-icon">
@@ -198,7 +198,7 @@
                 <p class="exper-titleAcad">
                     Cursos e certificados
                 </p>
-                <a href="#" target="_blank">
+                <a href="https://ude.my/UC-89c61d65-332a-4440-ac19-4cb2f560e673/" target="_blank">
                     <div class="exper-card">
                         <div class="exper-contIcon">
                             <div class="exper-icon">
@@ -216,7 +216,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://cursos.alura.com.br/certificate/65cdbe6e-0107-4b62-af05-474cb3b0c687" target="_blank">
                     <div class="exper-card">
                         <div class="exper-contIcon">
                             <div class="exper-icon">
@@ -235,7 +235,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://cursos.alura.com.br/certificate/07c7be73-46ec-44a1-97dc-1b3857a53240" target="_blank">
                     <div class="exper-card">
                         <div class="exper-contIcon">
                             <div class="exper-icon">
@@ -254,7 +254,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://cursos.alura.com.br/certificate/b22fb254-0948-49ce-9fb2-8d8fee4c5492" target="_blank">
                     <div class="exper-card">
                         <div class="exper-contIcon">
                             <div class="exper-icon">
@@ -272,7 +272,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://www.udemy.com/certificate/UC-b24c5bec-7777-4bb8-a1b7-25ba482b7010/" target="_blank">
                     <div class="exper-card">
                         <div class="exper-contIcon">
                             <div class="exper-icon">
@@ -285,12 +285,12 @@
                             </div>
                         </div>
                         <div class="exper-empresa">
-                            <span class="exper-empName">JavaScript</span><br>
+                            <span class="exper-empName">JavaScript - Curso COMPLETO com 6 Projetos REAIS</span><br>
                             <span class="exper-emptext">Udemy - Cursos de Tecnologia</span>
                         </div>
                     </div>
                 </a>
-                <a href="#" target="_blank">
+                <a href="https://cursos.alura.com.br/certificate/fa5723f1-68ef-4027-abf1-59d5e2a6f79c" target="_blank">
                     <div class="exper-card">
                         <div class="exper-contIcon">
                             <div class="exper-icon">
@@ -305,6 +305,60 @@
                         <div class="exper-empresa">
                             <span class="exper-empName">HTTP: Entendendo a web por baixo dos panos</span><br>
                             <span class="exper-emptext">Udemy - Cursos de Tecnologia</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://www.udemy.com/certificate/UC-R8FZTHPN/" target="_blank">
+                    <div class="exper-card">
+                        <div class="exper-contIcon">
+                            <div class="exper-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none">
+                                    <path
+                                        d="M21.4899 10.19L20.4899 9.63996L11.4899 4.63996H11.3799C11.3186 4.61403 11.255 4.59395 11.1899 4.57996H10.9999H10.8199C10.7516 4.59396 10.6846 4.61404 10.6199 4.63996H10.5099L1.50988 9.63996C1.35598 9.72717 1.22797 9.85365 1.13891 10.0065C1.04985 10.1593 1.00293 10.3331 1.00293 10.51C1.00293 10.6869 1.04985 10.8606 1.13891 11.0134C1.22797 11.1663 1.35598 11.2927 1.50988 11.38L3.99988 12.76V17.5C3.99988 18.2956 4.31595 19.0587 4.87856 19.6213C5.44117 20.1839 6.20423 20.5 6.99988 20.5H14.9999C15.7955 20.5 16.5586 20.1839 17.1212 19.6213C17.6838 19.0587 17.9999 18.2956 17.9999 17.5V12.76L19.9999 11.64V14.5C19.9999 14.7652 20.1052 15.0195 20.2928 15.2071C20.4803 15.3946 20.7347 15.5 20.9999 15.5C21.2651 15.5 21.5194 15.3946 21.707 15.2071C21.8945 15.0195 21.9999 14.7652 21.9999 14.5V11.06C21.9996 10.8828 21.9522 10.7088 21.8626 10.556C21.773 10.4031 21.6443 10.2768 21.4899 10.19V10.19ZM15.9999 17.5C15.9999 17.7652 15.8945 18.0195 15.707 18.2071C15.5194 18.3946 15.2651 18.5 14.9999 18.5H6.99988C6.73466 18.5 6.48031 18.3946 6.29277 18.2071C6.10523 18.0195 5.99988 17.7652 5.99988 17.5V13.87L10.5099 16.37L10.6599 16.43H10.7499C10.8329 16.4404 10.9169 16.4404 10.9999 16.43C11.0829 16.4404 11.1669 16.4404 11.2499 16.43H11.3399C11.393 16.4188 11.4437 16.3985 11.4899 16.37L15.9999 13.87V17.5ZM10.9999 14.36L4.05988 10.5L10.9999 6.63996L17.9399 10.5L10.9999 14.36Z"
+                                        fill="white" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="exper-empresa">
+                            <span class="exper-empName">Angular 7/8 - Material Design + Node.js + MongoDB + Firebase</span><br>
+                            <span class="exper-emptext">Udemy - Cursos de Tecnologia</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://cursos.alura.com.br/certificate/30b4bc63-74f0-4af9-87ea-4f184549691c" target="_blank">
+                    <div class="exper-card">
+                        <div class="exper-contIcon">
+                            <div class="exper-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none">
+                                    <path
+                                        d="M21.4899 10.19L20.4899 9.63996L11.4899 4.63996H11.3799C11.3186 4.61403 11.255 4.59395 11.1899 4.57996H10.9999H10.8199C10.7516 4.59396 10.6846 4.61404 10.6199 4.63996H10.5099L1.50988 9.63996C1.35598 9.72717 1.22797 9.85365 1.13891 10.0065C1.04985 10.1593 1.00293 10.3331 1.00293 10.51C1.00293 10.6869 1.04985 10.8606 1.13891 11.0134C1.22797 11.1663 1.35598 11.2927 1.50988 11.38L3.99988 12.76V17.5C3.99988 18.2956 4.31595 19.0587 4.87856 19.6213C5.44117 20.1839 6.20423 20.5 6.99988 20.5H14.9999C15.7955 20.5 16.5586 20.1839 17.1212 19.6213C17.6838 19.0587 17.9999 18.2956 17.9999 17.5V12.76L19.9999 11.64V14.5C19.9999 14.7652 20.1052 15.0195 20.2928 15.2071C20.4803 15.3946 20.7347 15.5 20.9999 15.5C21.2651 15.5 21.5194 15.3946 21.707 15.2071C21.8945 15.0195 21.9999 14.7652 21.9999 14.5V11.06C21.9996 10.8828 21.9522 10.7088 21.8626 10.556C21.773 10.4031 21.6443 10.2768 21.4899 10.19V10.19ZM15.9999 17.5C15.9999 17.7652 15.8945 18.0195 15.707 18.2071C15.5194 18.3946 15.2651 18.5 14.9999 18.5H6.99988C6.73466 18.5 6.48031 18.3946 6.29277 18.2071C6.10523 18.0195 5.99988 17.7652 5.99988 17.5V13.87L10.5099 16.37L10.6599 16.43H10.7499C10.8329 16.4404 10.9169 16.4404 10.9999 16.43C11.0829 16.4404 11.1669 16.4404 11.2499 16.43H11.3399C11.393 16.4188 11.4437 16.3985 11.4899 16.37L15.9999 13.87V17.5ZM10.9999 14.36L4.05988 10.5L10.9999 6.63996L17.9399 10.5L10.9999 14.36Z"
+                                        fill="white" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="exper-empresa">
+                            <span class="exper-empName">FLEXBOX: POSICIONE ELEMENTOS NA TELA</span><br>
+                            <span class="exper-emptext">Alura - Cursos de Tecnologia</span>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://cursos.alura.com.br/certificate/1a392181-821b-41a8-95e6-12cf39d39548" target="_blank">
+                    <div class="exper-card">
+                        <div class="exper-contIcon">
+                            <div class="exper-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none">
+                                    <path
+                                        d="M21.4899 10.19L20.4899 9.63996L11.4899 4.63996H11.3799C11.3186 4.61403 11.255 4.59395 11.1899 4.57996H10.9999H10.8199C10.7516 4.59396 10.6846 4.61404 10.6199 4.63996H10.5099L1.50988 9.63996C1.35598 9.72717 1.22797 9.85365 1.13891 10.0065C1.04985 10.1593 1.00293 10.3331 1.00293 10.51C1.00293 10.6869 1.04985 10.8606 1.13891 11.0134C1.22797 11.1663 1.35598 11.2927 1.50988 11.38L3.99988 12.76V17.5C3.99988 18.2956 4.31595 19.0587 4.87856 19.6213C5.44117 20.1839 6.20423 20.5 6.99988 20.5H14.9999C15.7955 20.5 16.5586 20.1839 17.1212 19.6213C17.6838 19.0587 17.9999 18.2956 17.9999 17.5V12.76L19.9999 11.64V14.5C19.9999 14.7652 20.1052 15.0195 20.2928 15.2071C20.4803 15.3946 20.7347 15.5 20.9999 15.5C21.2651 15.5 21.5194 15.3946 21.707 15.2071C21.8945 15.0195 21.9999 14.7652 21.9999 14.5V11.06C21.9996 10.8828 21.9522 10.7088 21.8626 10.556C21.773 10.4031 21.6443 10.2768 21.4899 10.19V10.19ZM15.9999 17.5C15.9999 17.7652 15.8945 18.0195 15.707 18.2071C15.5194 18.3946 15.2651 18.5 14.9999 18.5H6.99988C6.73466 18.5 6.48031 18.3946 6.29277 18.2071C6.10523 18.0195 5.99988 17.7652 5.99988 17.5V13.87L10.5099 16.37L10.6599 16.43H10.7499C10.8329 16.4404 10.9169 16.4404 10.9999 16.43C11.0829 16.4404 11.1669 16.4404 11.2499 16.43H11.3399C11.393 16.4188 11.4437 16.3985 11.4899 16.37L15.9999 13.87V17.5ZM10.9999 14.36L4.05988 10.5L10.9999 6.63996L17.9399 10.5L10.9999 14.36Z"
+                                        fill="white" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="exper-empresa">
+                            <span class="exper-empName">HTML5 E CSS3</span><br>
+                            <span class="exper-emptext">Alura - Cursos de Tecnologia</span>
                         </div>
                     </div>
                 </a>
