--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <title>Fabiano UI&UX Designer</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animation.css">
-
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "qmp59h4qs6");
+</script>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
