--- a/index.html
+++ b/index.html
@@ -449,7 +449,11 @@
                 </a>
             </div>
         </section>
+         <section>
+      <contact-component></contact-component>
+    </section>
     </div>
+    <script type="module" src="js/contact-component.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src='https://unpkg.com/scrollreveal/dist/scrollreveal.min.js'></script>
     <script src="js/script.js"></script>
