--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
       <contact-component></contact-component>
     </section>
     </div>
+    <script src="/js/formValidation.js"></script>
     <script type="module" src="js/contact-component.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src='https://unpkg.com/scrollreveal/dist/scrollreveal.min.js'></script>
