--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Fabiano UI&UX Designer</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animation.css">
+     <link rel="stylesheet" href="css/global.css">
     <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -453,7 +454,7 @@
       <contact-component></contact-component>
     </section>
     </div>
-    <script src="/js/formValidation.js"></script>
+    <script src="js/formValidation.js"></script>
     <script type="module" src="js/contact-component.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src='https://unpkg.com/scrollreveal/dist/scrollreveal.min.js'></script>
