--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container py-2">
       <div class="brand" aria-hidden>
-        <div class="brand__logo"><img src="/img/foto.png" alt=""></div>
+        <div class="brand__logo"><img src="foto.png" alt=""></div>
       </div>
       <a class="navbar-brand fw-bold" href="#">Fabiano Antero</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav"
